<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/SobreElJuego"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/Verde"
                android:textColorHint="@color/Naranja" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ComoEsElJuego"
                android:textColor="@color/Naranja" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Pantalla_castillo"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/Verde" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PantallaCastillo"
                android:textColor="@color/Naranja" />

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Pantalla_Heroe"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/Verde" />

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PantallaHeroe"
                android:textColor="@color/Naranja" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>